# LMTWT

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  config.json.example  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run.sh  setup.py
.github/workflows/: python-tests.yml
docs/: architecture.md  attacks.md  cli.md  configuration.md  index.md  lss.md  models.md  roadmap.md  taxonomy.md  utils.md  web.md
examples/: attack_ollama.sh  conversation_history_attack.py  custom_api_target.json  ollama_target.json
lmtwt/attacks/: payloads.py
src/: config.json  main.py
src/lmtwt/: cli.py  cli_dashboard.py  persistence.py
src/lmtwt/attacks/: __init__.py  async_engine.py  async_probe.py  catalog_probe.py  engine.py  flows.py  payloads.py  probeattack.py  strategies.py  templates.py  tools.py
src/lmtwt/chatbot_attacks/: __init__.py  channel_inconsistency.py  conversation_hijack.py  cost_amplification.py  jwt_claims.py  refusal_fatigue.py  session_lifecycle.py  tool_result_poisoning.py
src/lmtwt/discovery/: __init__.py  adaptive.py  climb.py  fingerprint.py  pollinate.py  self_play.py
src/lmtwt/models/: __init__.py  _transport.py  anthropic.py  async_acp.py  async_anthropic.py  async_base.py  async_external_api.py  async_factory.py  async_gemini.py  async_huggingface.py  async_openai.py  base.py  conversation.py  external_api.py  gemini.py  huggingface.py  openai.py
src/lmtwt/probes/: __init__.py  loader.py  schema.py
src/lmtwt/reporting/: __init__.py  builder.py  diff.py  repro.py  scorecard.py
src/lmtwt/scan/: __init__.py  bundle.py  orchestrator.py  plan.py
src/lmtwt/scoring/: __init__.py  lss.py  refusal_grade.py
src/lmtwt/utils/: async_judge.py  circuit_breaker.py  config.py  (+3 more)
src/tests/: test_payloads.py
tests/: test_async_acp.py  test_async_anthropic.py  test_async_engine.py  test_async_external_api.py  test_async_factory.py  test_async_gemini.py  test_async_judge.py  test_async_openai.py  test_async_probe.py  test_basic.py  test_chatbot_attacks.py  test_chatbot_attacks_extra.py  test_climb.py  test_conversation.py  test_dashboard.py  test_diff.py  test_discovery.py  test_external_factory.py  test_external_http.py  test_external_socketio.py  test_external_sse.py  test_external_websocket.py  test_flows.py  test_lmstudio.py  test_payloads.py  test_persistence.py  test_pollinate.py  test_probe_attack.py  test_probes.py  test_reporting.py  test_scan.py  test_scorecard.py  test_scoring.py  test_self_play.py  test_strategies.py  test_tools.py  test_transport.py  test_web_api.py
(+5 files in other folders)
